fix(mc): 修复 recipe 生成槽位时的重复 class